2011-06-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-completion-function, tramp-parse-rhosts)
	(tramp-parse-shosts, tramp-parse-sconfig, tramp-parse-shostkeys)
	(tramp-parse-hosts, tramp-parse-passwd, tramp-parse-netrc)
	(tramp-parse-putty):
	* tramp-sh.el (tramp-completion-function-alist-rsh)
	(tramp-completion-function-alist-ssh)
	(tramp-completion-function-alist-telnet)
	(tramp-completion-function-alist-su)
	(tramp-completion-function-alist-putty): Set `tramp-autoload'
	cookie.

	* tramp-efs.el:
	* tramp-ftp.el:
	* tramp-sh.el:
	* tramp-smb.el: Set `tramp-autoload' cookie, and eval after load
	"tramp.el" `tramp-set-completion-function'.

2011-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* <lots-of-files>.el: Don't quote lambda expressions with `quote'.

2011-05-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions): Set "first-password-request"
	property for the correct connection in case of multihops.

2011-05-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Use "dd" instead
	of "head" and "tail".  There were problems with SunOS 5.9, and it
	performs better.

2011-05-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band): Fix port
	computation bug.  (Bug#8618)

2011-04-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions): Add POS argument.  Delete
	region between POS and (pos).

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band): Use
	`nil' position in `tramp-process-actions' call.
	(tramp-maybe-open-connection): Call `tramp-process-actions' with pos.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use `nil'
	position in `tramp-process-actions' call.

2011-04-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-file-attributes): Handle the case
	when the scripts fail.  Use `tramp-do-file-attributes-with-ls' then.